src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/project-fn-ret-invariant.rs:58:8
   |
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |        ^^^

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:58:4
   |
LL | fn baz<'a,'b>(x: Type<'a>) -> Type<'static> {
   |        -- lifetime `'a` defined here
...
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |    ^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

